--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,8 @@
 /* CSS Document */
 
+html {background-color:#64D7EF;}
+#banner {text-align:center;}
+#nav {background-color:#FFD600;}
+#nav {text-align:center;}
+#content {text-align:center;}
+#footer {text-align:center;}
