--- a/css/styles-main.css
+++ b/css/styles-main.css
@@ -4,5 +4,6 @@ html {background-color:#64D7EF;}
 #banner {text-align:center;}
 #nav {background-color:#FFD600;}
 #nav {text-align:center;}
+#nav {font-family:"orange juice"; font-size:36px}
 #content {text-align:center;}
 #footer {text-align:center;}
